keras_ssd7 in reqs

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ scikit-learn>=0.19
 keras>=2.0.0
 tensorflow
 matplotlib
+git+https://github.com/paris-saclay-cds/ssd_keras
 git+https://github.com/paris-saclay-cds/ramp-workflow
